# typescope

./: README.md  pyproject.toml
typescope/: __main__.py  main.py  tree.py
